[package]
name = "rsomics-vcf-freq-table"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Allele frequency and count tables from a VCF (vcftools --freq/--freq2/--counts/--counts2)"
readme = "README.md"
repository = "https://github.com/omics-rust/rsomics-vcf-freq-table"

[[bin]]
name = "rsomics-vcf-freq-table"
path = "src/main.rs"

[lib]
name = "rsomics_vcf_freq_table"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = "0.6"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
rayon = "1"

[dev-dependencies]
tempfile = "3"
